--- a/Front End Development Libraries/Random Quote Machine/index.html
+++ b/Front End Development Libraries/Random Quote Machine/index.html
@@ -35,11 +35,12 @@
           <button class="button" id="new-quote">New quote</button>
         </div>
       </div>
-      <div class="footer">by <a href="https://codepen.io/hezag/">hezag</a></div>
+      <div class="footer">by <a href="https://codepen.io/hezag/">Joseph Ledo-Massey</a></div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
+
 
