--- a/Responsive Web Design - FreeCodeCamp/Certification Project - Survey Form/index.html
+++ b/Responsive Web Design - FreeCodeCamp/Certification Project - Survey Form/index.html
@@ -1,12 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+<!--document declaration-->
+<!DOCTYPE html>   
+<!--The html tag represents the root of an HTML document. lang="en" specifies that English is used for all the text on the page-->
+<html lang="en"> 
 
 
-<!---->
+<!--the head tag is a container for metadata. Metadata is data about the HTML document-->
   <head>
-    <meta charset="UTF-8">
-    <title>Survey Form</title>
-    <link rel="stylesheet" href="styles.css" href="stles.css"/>
+    <meta charset="UTF-8"> <!--Specifies the character set, UTF-8 is the most common because it covers almost all of the characters and symbols in the world-->
+    <title>Survey Form</title> <!--Defines the title of the page and is shown in the browser's title bar. It is very important for search engine optimization (SEO)-->
+    <link rel="stylesheet" href="styles.css"/> <!--Defines the relationship between the current document and an external resource-->
   </head>
 
 
