--- a/Responsive Web Design - FreeCodeCamp/Certification Project - Survey Form/index.html
+++ b/Responsive Web Design - FreeCodeCamp/Certification Project - Survey Form/index.html
@@ -24,9 +24,8 @@
       </fieldset>
 
 
-<!---->
-      <fieldset>
-          <label id="number-label">Enter a number:<input id="number" type="number" placeholder="ex: 2" min="0" max="10" required /></label>
+      <fieldset> <!--Groups related elements in a form, draws a box around the related elements-->
+          <label id="number-label">Enter a number:<input id="number" type="number" placeholder="ex: 2" min="0" max="10" required /></label> <!---->
           <label>How did you hear about us?
             <select id="dropdown">
               <option value="">(select one)</option>
