--- a/Data Visualization/Visualize Data with a Bar Chart/index.html
+++ b/Data Visualization/Visualize Data with a Bar Chart/index.html
@@ -1,18 +1,12 @@
-/*
-This code is written in HTML, which stands for Hypertext Markup Language. It is a standardized system for marking up text files to achieve font, color, graphic, and hyperlink effects on World Wide Web pages.
 
-The code begins with the <!DOCTYPE html> declaration, which tells the web browser that this is an HTML5 document.
-
-The code between the <html> tags represents the root of the HTML document.
-
-The <head> element contains information about the document, such as the title, which is not displayed in the browser window. The <link> element with the rel attribute set to "stylesheet" and the href attribute set to "styles.css" tells the browser to apply the styles defined in the "styles.css" file to the HTML document. The <script> element with the src attribute set to "https://cdnjs.cloudflare.com/ajax/libs/d3/7.6.1/d3.min.js" tells the browser to load and execute the JavaScript file located at that URL.
-
-The <body> element contains the content that is displayed in the browser window. The <div> elements with the class attributes "main", "container", "title", and "visHolder" are used to define sections of the page and apply styles to them. The <div> element with the id attribute "title" contains the text "United States GDP".
-
-Finally, the <script> element with the src attribute set to "script.js" tells the browser to load and execute the JavaScript file located at that URL.
-
-This code will create a webpage that displays the title "United States GDP" and has the styles and functionality defined in the "styles.css" and "script.js" files applied to it.
-*/
+<!-- This code is written in HTML, which stands for Hypertext Markup Language. It is a standardized system for marking up text files to achieve font, color, graphic, and hyperlink effects on World Wide Web pages.
+  The code begins with the <!DOCTYPE html> declaration, which tells the web browser that this is an HTML5 document.
+  The code between the <html> tags represents the root of the HTML document.
+  The <head> element contains information about the document, such as the title, which is not displayed in the browser window. The <link> element with the rel attribute set to "stylesheet" and the href attribute set to "styles.css" tells the browser to apply the styles defined in the "styles.css" file to the HTML document. The <script> element with the src attribute set to "https://cdnjs.cloudflare.com/ajax/libs/d3/7.6.1/d3.min.js" tells the browser to load and execute the JavaScript file located at that URL.
+  The <body> element contains the content that is displayed in the browser window. The <div> elements with the class attributes "main", "container", "title", and "visHolder" are used to define sections of the page and apply styles to them. The <div> element with the id attribute "title" contains the text "United States GDP".
+  Finally, the <script> element with the src attribute set to "script.js" tells the browser to load and execute the JavaScript file located at that URL.
+  This code will create a webpage that displays the title "United States GDP" and has the styles and functionality defined in the "styles.css" and "script.js" files applied to it.
+-->
 
 <!DOCTYPE html>
 <html>
