--- a/Data Visualization/Visualize Data with a Choropleth Map/index.html
+++ b/Data Visualization/Visualize Data with a Choropleth Map/index.html
@@ -1,3 +1,17 @@
+<!--
+This code is written in HTML, which stands for Hypertext Markup Language. It is a standardized system for marking up text files to achieve font, color, graphic, and hyperlink effects on World Wide Web pages.
+
+The code begins with the <!DOCTYPE html> declaration, which tells the web browser that this is an HTML5 document.
+
+The code between the <html> tags represents the root of the HTML document.
+
+The <head> element contains information about the document, such as the title and links to external resources. The <title> element specifies the title of the page, which is displayed in the browser tab. The <link> element with the rel attribute set to "stylesheet" and the href attribute set to "styles.css" tells the browser to apply the styles defined in the "styles.css" file to the HTML document. The <script> elements with the src attributes set to various URLs tell the browser to load and execute the JavaScript files located at those URLs. These files include the d3 library, the topojson library, and the d3-scale-chromatic library.
+
+The <body> element contains the content that is displayed in the browser window. The <div> element with the id attribute "main" holds the content of the page. The <h1> element with the id attribute "title" contains the title of the page. The <div> element with the id attribute "description" contains a description of the data displayed on the page. The <svg> element with the width and height attributes set to "960" and "600" respectively, creates an SVG element that will be used to display a map. The <div> element with the id attribute "source" contains a link to the source of the data used on the page.
+
+Finally, the <script> element with the src attribute set to "script.js" tells the browser to load and execute the JavaScript file located at that URL. This file will contain the code to create and customize the map.
+-->
+
 <!DOCTYPE html>
 <html>
   <head>
