--- a/Data Visualization/Visualize Data with a Heat Map/index.html
+++ b/Data Visualization/Visualize Data with a Heat Map/index.html
@@ -1,3 +1,8 @@
+
+<!--
+This is an HTML document that uses the <link> tag to include a stylesheet file called "styles.css" and the <script> tag to include two JavaScript files: "d3.min.js" and "d3-v6-tip.js". The <title> tag sets the title of the page as "FCC: D3 Heat Map". The script file "script.js" is also included at the end of the body. The purpose of the HTML file is to provide a structure for the webpage and to include the necessary resources for the page to function correctly.
+-->
+
 <!DOCTYPE html>
 <html>
   <head>
