--- a/Data Visualization/Visualize Data with a Scatterplot Graph/index.html
+++ b/Data Visualization/Visualize Data with a Scatterplot Graph/index.html
@@ -1,3 +1,11 @@
+<!--
+This is an HTML file that includes a link to a stylesheet file and two script files. The file sets up the structure of an HTML document, with the head element containing metadata about the document and the body element containing the content of the document.
+
+The link element with a "rel" attribute of "stylesheet" and an "href" attribute pointing to "styles.css" specifies a stylesheet file that defines the visual appearance of the HTML content. The script elements with "src" attributes pointing to the URLs of two external JavaScript libraries, "d3.min.js" and "d3-v6-tip.js", include those libraries in the document. The title element specifies the title of the document, which will be displayed in the browser tab or window.
+
+The body element also includes a script element with a "src" attribute pointing to "script.js", which specifies a JavaScript file that will be run when the HTML page is loaded.
+-->
+
 <!DOCTYPE html>
 <html>
   <head>
