--- a/Data Visualization/Visualize Data with a Treemap Diagram/index.html
+++ b/Data Visualization/Visualize Data with a Treemap Diagram/index.html
@@ -1,3 +1,13 @@
+<!--
+This is an HTML file that includes a style sheet and two JavaScript files. The style sheet and JavaScript files are used to style and interact with the contents of the HTML file.
+
+The HTML file includes three links that allow the user to select between different data sets. It also includes an svg element with an id attribute of "tree-map" and a width and height of 960 and 570 pixels, respectively. This svg element will be used to display a tree map visualization of the selected data set.
+
+The HTML file also includes an svg element with an id attribute of "legend" and a width of 500 pixels. This svg element will be used to display a legend for the tree map visualization.
+
+Finally, the HTML file includes a script element that will load a script file named "script.js", which will contain the code to generate and interact with the tree map visualization and legend.
+-->
+
 <!DOCTYPE html>
 <html>
   <head>
