--- a/Responsive Web Design - FreeCodeCamp/Certification Project - Personal Portfolio Webpage/index.html
+++ b/Responsive Web Design - FreeCodeCamp/Certification Project - Personal Portfolio Webpage/index.html
@@ -1,3 +1,21 @@
+<!--
+This code is a HTML file for a personal website. It has several sections that are structured using the section element and styled using CSS.
+
+The HTML file starts with a DOCTYPE declaration and a html element. Inside the html element, there is a head element that contains links to a stylesheet file, a font library, and a font from Google Fonts.
+
+The body element contains the content of the website. The content is organized into several sections, each of which is marked with a section element and has a unique id attribute.
+
+The first section is the navigation bar, which is marked with the nav element and has an id attribute of "navbar". The navigation links are contained in an unordered list (ul element) and each link is represented by a list item (li element) with an anchor (a element) inside it.
+
+The second section is the welcome section, which has an id attribute of "welcome-section" and contains a heading (h1 element) and a paragraph (p element) with the name and occupation of the website owner, and another paragraph (p element) with some text.
+
+The third section is the projects section, which has an id attribute of "projects" and contains a heading (h2 element) and a grid of project tiles (a elements with the class "project-tile"). Each project tile contains an image (img element) and a paragraph (p element) with the title of the project.
+
+The fourth section is the contact section, which has an id attribute of "contact" and contains a heading (h2 element) and a form (form element) with several form fields (input elements) and a submit button (button element).
+
+The HTML file also includes several script elements that link to external JavaScript files. These files contain code that adds interactivity and functionality to the website.
+-->
+
 <!DOCTYPE html>
 <html>
   <head>
