--- a/Responsive Web Design - FreeCodeCamp/Certification Project - Product Landing Page/index.html
+++ b/Responsive Web Design - FreeCodeCamp/Certification Project - Product Landing Page/index.html
@@ -1,3 +1,25 @@
+<!--
+This code is written in HTML (Hypertext Markup Language), a markup language used to structure and format content on the web.
+
+The code begins with a DOCTYPE declaration, which specifies the version of HTML used in the document. In this case, the DOCTYPE is html, which indicates that the document is written in HTML5, the latest version of HTML.
+
+The code includes a head element and a body element. The head element contains metadata about the document, such as the title and links to external resources, such as stylesheets and scripts. The body element contains the content of the document that is visible to the user.
+
+The link elements in the head element include rel and href attributes that specify the relationship between the document and the linked resource, and the location of the resource, respectively. The link elements in this code link to an external stylesheet and to a stylesheet from Font Awesome, a library of scalable vector icons.
+
+The div element with an id of page-wrapper acts as a container for the other elements in the document. Within the page-wrapper element, there is a header element with an id of header, which contains a logo and a navigation bar. The logo is a div element with a class of logo that contains an img element with an id of header-img. The navigation bar is a nav element with an id of nav-bar that contains a list of links in an ul element.
+
+Below the header element is a section element with an id of hero. This section element contains a form element with an id of form, which includes an input element for the user's email address and a submit button element.
+
+The code also includes a section element with an id of features, which contains a series of div elements with a class of grid. Each grid element contains an icon div element with an i element from Font Awesome, and a desc div element with a heading and a paragraph of text.
+
+There is also a section element with an id of how-it-works, which contains an iframe element that embeds a YouTube video.
+
+The code also includes a section element with an id of pricing, which contains a series of div elements with a class of product. Each product element includes a level div element, a heading, an ordered list, and a button element.
+
+Finally, the code includes a footer element with an id of footer, which contains a list of links in an ul element, and a div element with a class of copyright.
+-->
+
 <!DOCTYPE html>
 <html>
   <head>
