--- a/Responsive Web Design - FreeCodeCamp/Certification Project - Survey Form/index.html
+++ b/Responsive Web Design - FreeCodeCamp/Certification Project - Survey Form/index.html
@@ -1,3 +1,22 @@
+<!--
+The code is an HTML document that defines a survey form. The document begins with a document declaration, which specifies that it is an HTML document.
+
+The html element represents the root of the HTML document and has an attribute "lang" that specifies the language of the text on the page, in this case "en" for English.
+
+Inside the html element, there is a head element which contains metadata about the document. In this case, there is a meta element that specifies the character set used in the document as UTF-8, a title element that defines the title of the page, and a link element that defines the relationship between the document and an external resource, a stylesheet file called "styles.css".
+
+The body element contains all the contents of the document, which in this case is a survey form. The form is made up of several fieldset elements, each of which groups related elements and draws a box around them.
+
+The first fieldset contains two label elements, each of which has an input element for the user to enter their name and email. The second fieldset contains a label element with an input element for the user to enter a number, and a select element with options for the user to choose how they heard about the survey.
+
+The third fieldset contains radio buttons for the user to select their account type, and the fourth fieldset contains checkboxes for the user to select their highest level of education.
+
+The fifth fieldset contains a label element with a textarea element for the user to enter additional comments. Finally, there is a submit button for the user to submit their responses.
+
+Each element has an id attribute that gives it a unique identifier, which can be used to style the element with CSS or manipulate it with JavaScript. Some elements also have attributes that specify additional information or requirements, such as the type attribute on the input elements or the required attribute on some elements.
+
+-->
+
 <!DOCTYPE html> <!--document declaration-->
 <html lang="en"> <!--The html tag represents the root of an HTML document. lang="en" specifies that English is used for all the text on the page-->
 
