--- a/Responsive Web Design - FreeCodeCamp/Certification Project - Technical Documentation Page/index.html
+++ b/Responsive Web Design - FreeCodeCamp/Certification Project - Technical Documentation Page/index.html
@@ -1,3 +1,17 @@
+<!--
+This is an HTML document that defines a technical documentation page about wingsuit flying. The document begins with a document declaration specifying that it is an HTML document, and the html element has a lang attribute set to "en" for English.
+
+Inside the html element, there is a head element which contains metadata about the document. In this case, there is a meta element that specifies the character set used in the document as UTF-8, a meta element that sets the viewport, a meta element that provides a description of the page, and a title element that sets the title of the page. There is also a link element that links the document to an external stylesheet file called "styles.css".
+
+The body element contains the contents of the document, which is divided into two main sections: a nav element that defines a navigation bar with links to different sections of the document, and a main element that contains the main content of the document.
+
+The nav element has a header element and an unordered list element with list items that contain links to the different sections of the document. The main element has several section elements, each of which has a header element and one or more p elements that contain the content of the section. Some sections also have li elements and code elements.
+
+Each element has an id attribute that gives it a unique identifier, which can be used to style the element with CSS or manipulate it with JavaScript. Some elements also have a class attribute that assigns them to a class, which can be used to apply common styles to multiple elements.
+
+The content of the document is organized in a hierarchical structure, with the nav element and main element being the top-level elements and the section elements being nested inside the main element. The structure and organization of the document helps to make it easy to read and understand.
+-->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
