--- a/Responsive Web Design - FreeCodeCamp/Certification Project - Tribute Page/index.html
+++ b/Responsive Web Design - FreeCodeCamp/Certification Project - Tribute Page/index.html
@@ -1,3 +1,19 @@
+<!--
+This is an HTML document that defines a tribute page for the FAMU-FSU College of Engineering. The document begins with a document declaration specifying that it is an HTML document, and the html element has a lang attribute set to "en" for English.
+
+Inside the html element, there is a head element which contains metadata about the document. In this case, there is a meta element that specifies the character set used in the document as UTF-8, a meta element that sets the viewport, a meta element that provides a description of the page, and a title element that sets the title of the page. There is also a link element that links the document to an external stylesheet file called "styles.css".
+
+The body element contains the main content of the document, which is divided into a main element and several other elements. The main element has a header element that contains an h1 element with the title of the page, a p element with a tagline, and a nav element that is currently empty.
+
+The main element also has a div element with the id "img-div" and the class "img-div", which contains an img element with an id of "image" and a src attribute that specifies the source of the image as an URL. The img element is followed by a figcaption element with an id of "img-caption" that provides a caption for the image.
+
+The main element also has a div element with the id "tribute-info" and the class "list", which contains an unordered list element with three list items. Finally, the main element has an a element with an id of "tribute-link" and a target attribute set to "_blank", which creates a link to an external website with the URL specified in the href attribute. The link has additional information about the FAMU-FSU College of Engineering.
+
+Each element has an id attribute that gives
+
+-->
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
