--- a/Front End Development Libraries/Random Quote Machine/index.html
+++ b/Front End Development Libraries/Random Quote Machine/index.html
@@ -3,7 +3,7 @@ This is an HTML code for a web page that displays a randomly generated quote, wi
 
 The page has a main div element with an id of "wrapper". Within this element, there is a div element with an id of "quote-box", which contains the quote and the author of the quote. There are also three buttons for tweeting, posting on Tumblr, and generating a new quote.
 
-The page includes several external script files: jQuery, jQuery UI, and "script.js". The jQuery and jQuery UI libraries are used for adding interactivity to the page, and "script.js" likely contains the JavaScript code for generating and displaying the quotes and handling the user's interactions with the buttons.
+The page includes several external script files: jQuery, jQuery UI, and "script.js". The jQuery and jQuery UI libraries are used for adding interactivity to the page, and "script.js" contains the JavaScript code for generating and displaying the quotes and handling the user's interactions with the buttons.
 -->
 
 <!DOCTYPE html>
