--- a/Front End Development Libraries/Markdown Previewer/index.html
+++ b/Front End Development Libraries/Markdown Previewer/index.html
@@ -1,3 +1,11 @@
+<!--
+This is an HTML code for a web page that includes a simple markdown previewer built with React. The page includes a link to a stylesheet file called "styles.css" for styling the page, and links to the Font Awesome and Prism libraries for adding icons and syntax highlighting to the page, respectively. The page has a title of "FCC: Simple React Markdown Previewer".
+
+The page has a single div element with an id of "app", which will be used by the React app to render its components.
+
+The page includes several external script files: the React and React DOM libraries, the Marked library for parsing markdown, and the Prism library for syntax highlighting. The page also includes a script file called "bundle.js", which likely contains the JavaScript code for the React app.
+-->
+
 <!DOCTYPE html>
 <html>
   <head>
