--- a/Front End Development Libraries/JavaScript Calculator/index.html
+++ b/Front End Development Libraries/JavaScript Calculator/index.html
@@ -1,3 +1,13 @@
+<!--
+This is an HTML file that includes a link to a CSS stylesheet and three script files.
+
+The link to the CSS stylesheet specifies that the styles in the file "styles.css" should be applied to the content of the page.
+
+The three script files are all loaded using script tags. The first two script tags are for the React library and the React DOM library, which are JavaScript libraries used for building user interfaces. The third script tag is for a file called "bundle.js", which is likely a file containing JavaScript code specific to this HTML page.
+
+The body of the HTML page includes a single div element with an id of "app". This div element is likely where the React components of the page will be rendered.
+-->
+
 <!DOCTYPE html>
 <html>
   <head>
