--- a/Front End Development Libraries/Drum Machine/index.html
+++ b/Front End Development Libraries/Drum Machine/index.html
@@ -1,3 +1,13 @@
+<!--
+This is an HTML file that serves as the layout for a webpage.
+
+The webpage will include a link to a stylesheet and a link to a font-awesome stylesheet for icons.
+
+There is a div element with an id of "root" that will be used as a container for the React app.
+
+The page also includes a script tag that loads the React library and another script tag that loads the React DOM library. Finally, it includes a script tag that will load the bundled JavaScript file for the React app.
+-->
+
 <!DOCTYPE html>
 <html>
   <head>
