--- a/Front End Development Libraries/25 + 5 Clock/index.html
+++ b/Front End Development Libraries/25 + 5 Clock/index.html
@@ -1,5 +1,5 @@
 <!--
-
+This is an HTML document that will render a web page with a clock. The page includes a link to a stylesheet file called styles.css which will provide styling for the page. The page also includes links to Google Fonts and to the Font Awesome library for use in the page. There is a div element with an id of "container" that will contain the clock, which will be rendered by a script file called bundle.js. The page also includes references to React and React DOM libraries, which are used to create the clock.
 -->
 
 <!DOCTYPE html>
